--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background-color: var(--primary);
 }
@@ -18,6 +22,16 @@ body{
 .main-container{
     width: 100%;
     min-height: 100vh;
+}
+
+.container{
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+}
+
+main{
+    flex-grow: 1;
 }
 
 .wrapper{
