--- a/styles/pages/homepage.css
+++ b/styles/pages/homepage.css
@@ -1,13 +1,3 @@
-.container{
-    display: flex;
-    flex-direction: row;
-    min-height: 100vh;
-}
-
-main{
-    flex-grow: 1;
-}
-
 ul,ol{
     list-style-type: circle;
     list-style-position: inside;
@@ -48,8 +38,7 @@ header>input{
     flex: 1;
     border-radius: 12px;
     overflow: hidden;
-
-    background: url(../../images/bg2.jpg) no-repeat center/cover;
+    background: url(../../images/headphones.jpg) no-repeat center/cover;
 }
 .hero>.hero-image{
     flex:1
@@ -59,7 +48,7 @@ header>input{
 .category-cards{
     display: grid;
     /* max-width: 1500px; */
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
     grid-auto-rows: auto;
     gap: 16px;
     padding: var(--padding);
@@ -88,7 +77,7 @@ header>input{
     width: 100%;
     height: 100%;
     padding: var(--padding);
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1) 10%,rgba(0, 0, 0, 0.72));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2) 10%,rgba(0, 0, 0, 0.65));
     display: flex;
     flex-direction: column;
     justify-content: end;
@@ -107,4 +96,7 @@ button.shop{
     background-color: var(--accent);
     border: none;
     border-radius: 8px;
+}
+button.build-pc{
+    width: clamp(150px,80%,300px);
 }
