--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(./styles/colors.css);
 @import url(./styles/fonts.css);
 @import url(./styles/nav.css);
+@import url(./styles/form.css);
 @import url(./styles/animations.css);
 
 *,::after,::before{
