--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -1,6 +1,8 @@
 .info-text{
     /* padding: var(--padding); */
-    padding: 0.5rem 1rem 2rem 2rem;
+    padding: 0.4rem 1rem 2rem 2rem;
     max-width: 600px;
-    line-height: 1.1;
+    line-height: 1.4;
+    font-size: 0.9rem;
+    letter-spacing: 1px;
 }
