--- a/styles/pages/products.css
+++ b/styles/pages/products.css
@@ -17,12 +17,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    gap: 8px;
     transition: background-color 250ms;
 }
 .cat-card:hover{
     background-color: var(--accent);
 }
-
+.card-selected{
+    background-color: var(--accent);
+}
 .cat-image{
     flex: 3;
     width: 80%;
@@ -41,7 +44,7 @@
 .products{
     padding: var(--padding);
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
     grid-auto-rows: auto;
     gap: var(--padding);
     align-self: baseline;
