--- a/styles/pages/products.css
+++ b/styles/pages/products.css
@@ -61,12 +61,13 @@
     align-items: center;
     justify-content: space-around;
     gap: 8px;
-    transition: background-color 250ms;
+    transition: scale 250ms;
     overflow: hidden;
 }
 .prod-card:hover{
     /* background-color: var(--accent); */
-    border: 1px solid var(--accent);
+    scale: 0.95;
+    /* box-shadow: 0px 0px 8px -2px var(--accent); */
 }
 
 .prod-image{
