--- a/styles/form.css
+++ b/styles/form.css
@@ -14,7 +14,7 @@ form{
     padding: var(--padding);
 
     display: grid;
-    grid-template-columns: repeat(2,minmax(150px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     grid-auto-rows: min-content;
     gap: var(--padding);
 
