--- a/styles/nav.css
+++ b/styles/nav.css
@@ -45,3 +45,44 @@ nav>ul>a>li{
 nav>ul>a>li:hover{
     color: var(--accent);
 }
+
+.menu{
+    width: 50px;
+    height: 50px;
+    /* border: 2px dashed red; */
+}
+.menu{
+    width: 25px;
+    height: 3px;
+    background-color: var(--accent);
+    position: relative;
+    box-shadow: 0px 8px 0px var(--accent), 0px -8px 0px var(--accent);
+}
+
+
+.fixed-nav{
+    width: 55%;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.fixed-nav>ul,.fixed-nav>p{
+    margin: 15vh 0;
+}
+
+.nav-modal{
+    display: none;
+}
+.nav-modal-open{
+    display: block;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0.4);
+}
