--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -21,7 +21,7 @@
 .page-title{
     text-transform: capitalize;
     font-size: 2rem;
-    color: var(--accent);
+    /* color: var(--accent); */
     background-color: var(--primary-lighter);
     padding: var(--padding);
     font-weight: bold;
