--- a/styles/form.css
+++ b/styles/form.css
@@ -62,10 +62,12 @@ label{
 }
 
 button.submit{
-    width: 80%;
+    width: 100%;
     padding: var(--padding);
+    margin-bottom: 8px;
     background-color: var(--accent);
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    color: var(--primary);
 }
