--- a/styles/pages/products.css
+++ b/styles/pages/products.css
@@ -31,7 +31,7 @@
     width: 80%;
     border-radius: 24px;
     background: url(../../images/bg1.jpg) no-repeat center/cover;
-
+    
 }
 .cat-label{
     flex: 1;
@@ -75,7 +75,7 @@
     width: 100%;
     border-radius: 8px;
     background: url(../../images/cpu.jpg) no-repeat center/cover;
-
+    
 }
 .prod-description{
     flex: 1;
@@ -86,5 +86,9 @@ button.buy{
     background: var(--accent);
     border: none;
     border-radius: 8px;
+    padding: var(--padding);
+}
+
+.actions-bar{
     padding: var(--padding);
 }
